--- a/DesktopCalculator/DesktopCalculator/MainWindow.xaml
+++ b/DesktopCalculator/DesktopCalculator/MainWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="Execute_Button" Content="Button" HorizontalAlignment="Left" Margin="208,173,0,0" VerticalAlignment="Top" Width="75" Click="Execute_Button_Click"/>
+        <TextBox x:Name="Teksto_dezute" HorizontalAlignment="Left" Height="23" Margin="208,66,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="Etikete" Content="Label" HorizontalAlignment="Left" Margin="208,112,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
