--- a/TicTacToe/TicTacToe/MainWindow.xaml
+++ b/TicTacToe/TicTacToe/MainWindow.xaml
@@ -5,27 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TicTacToe"
         mc:Ignorable="d"
-        Title="MainWindow" Height="306.56" Width="292.908">
+        Title="MainWindow" Height="271.808" Width="234.575">
     <Grid Width="400" Height="400">
         <Grid.RowDefinitions>
             <RowDefinition Height="39*"/>
-            <RowDefinition Height="4*"/>
-            <RowDefinition Height="63*"/>
+            <RowDefinition/>
+            <RowDefinition Height="66*"/>
             <RowDefinition Height="294*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="29*"/>
             <ColumnDefinition Width="171*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="25,0,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Click="buttonClicked" Grid.Row="2" Tag="11"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="54,0,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="2" Tag="12" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="142,0,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="2" Tag="13" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="25,0,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="3" Tag="21" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="54,0,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="22" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="142,0,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="23" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="25,66,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="3" Tag="31" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="54,66,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="32" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="142,66,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="33" Click="buttonClicked"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,26,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Click="buttonClicked" Tag="11" Grid.RowSpan="3"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="27,26,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Tag="12" Click="buttonClicked" Grid.RowSpan="3"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,26,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Tag="13" Click="buttonClicked" Grid.RowSpan="3"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,52,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="2" Tag="21" Click="buttonClicked" Grid.RowSpan="2"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="27,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="2" Tag="22" Click="buttonClicked" Grid.RowSpan="2"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="2" Tag="23" Click="buttonClicked" Grid.RowSpan="2"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,52,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="3" Tag="31" Click="buttonClicked"/>
+        <Button Content="" HorizontalAlignment="Right" Height="60" Margin="0,52,255,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="32" Click="buttonClicked"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="33" Click="buttonClicked"/>
 
     </Grid>
 </Window>
