--- a/TicTacToe/TicTacToe/MainWindow.xaml
+++ b/TicTacToe/TicTacToe/MainWindow.xaml
@@ -17,15 +17,15 @@
             <ColumnDefinition Width="29*"/>
             <ColumnDefinition Width="171*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,26,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Click="buttonClicked" Tag="11" Grid.RowSpan="3"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="27,26,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Tag="12" Click="buttonClicked" Grid.RowSpan="3"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,26,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Tag="13" Click="buttonClicked" Grid.RowSpan="3"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,52,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="2" Tag="21" Click="buttonClicked" Grid.RowSpan="2"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="27,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="2" Tag="22" Click="buttonClicked" Grid.RowSpan="2"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="2" Tag="23" Click="buttonClicked" Grid.RowSpan="2"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,52,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="3" Tag="31" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Right" Height="60" Margin="0,52,255,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="32" Click="buttonClicked"/>
-        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="33" Click="buttonClicked"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,26,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Click="buttonClicked" Tag="11" Grid.RowSpan="3" FontSize="48" FontWeight="Bold"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="27,26,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Tag="12" Click="buttonClicked" Grid.RowSpan="3" FontSize="48" FontWeight="Bold"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,26,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Tag="13" Click="buttonClicked" Grid.RowSpan="3" FontSize="48" FontWeight="Bold"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,52,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="2" Tag="21" Click="buttonClicked" Grid.RowSpan="2" FontSize="48" FontWeight="Bold"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="27,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="2" Tag="22" Click="buttonClicked" Grid.RowSpan="2" FontSize="48" FontWeight="Bold"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="2" Tag="23" Click="buttonClicked" Grid.RowSpan="2" FontSize="48" FontWeight="Bold"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,52,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="3" Tag="31" Click="buttonClicked" FontSize="48" FontWeight="Bold"/>
+        <Button Content="" HorizontalAlignment="Right" Height="60" Margin="0,52,255,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="32" Click="buttonClicked" FontSize="48" FontWeight="Bold"/>
+        <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="33" Click="buttonClicked" FontSize="48" FontWeight="Bold"/>
 
     </Grid>
 </Window>
