--- a/TicTacToe/TicTacToe/MainWindow.xaml
+++ b/TicTacToe/TicTacToe/MainWindow.xaml
@@ -26,6 +26,7 @@
         <Button Content="" HorizontalAlignment="Left" Height="60" Margin="18,52,0,0" VerticalAlignment="Top" Width="60" Grid.ColumnSpan="2" Grid.Row="3" Tag="31" Click="buttonClicked" FontSize="48" FontWeight="Bold"/>
         <Button Content="" HorizontalAlignment="Right" Height="60" Margin="0,52,255,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="32" Click="buttonClicked" FontSize="48" FontWeight="Bold"/>
         <Button Content="" HorizontalAlignment="Left" Height="60" Margin="92,52,0,0" VerticalAlignment="Top" Width="60" Grid.Column="1" Grid.Row="3" Tag="33" Click="buttonClicked" FontSize="48" FontWeight="Bold"/>
+        <Label x:Name="winnerLbl" Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="33,3,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
