Renka ranodm zodi

--- a/Kartuves/Kartuves pr/MainWindow.xaml
+++ b/Kartuves/Kartuves pr/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button x:Name="startBtn" Content="Button" HorizontalAlignment="Left" Height="22" Margin="193,236,0,0" VerticalAlignment="Top" Width="83" Click="Button_Click"/>
+        <Button x:Name="startBtn" Content="Start" HorizontalAlignment="Left" Height="22" Margin="193,236,0,0" VerticalAlignment="Top" Width="83" Click="Button_Click"/>
         <Label x:Name="wordLbl" Content="Label" HorizontalAlignment="Left" Margin="121,236,0,0" VerticalAlignment="Top"/>
         <Label x:Name="tryCountLbl" Content="Label" HorizontalAlignment="Left" Margin="46,232,0,0" VerticalAlignment="Top"/>
 
